<resources>
    <string name="app_name">Sachpee</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="register">Đăng nhập</string>
    <string name="menu_main">Trang Chủ</string>
    <string name="menu_home">Trang chủ</string>
    <string name="menu_Product">Sản phẩm</string>
    <string name="menu_Bill">Hóa đơn</string>
    <string name="menu_statistic">Thống kê</string>

    <string name="menu_account">Tài khoản</string>
    <string name="menu_partner">Đối tác</string>
    <string name="menu_sign_out">Đăng xuất</string>
    <string name="menu_food">Sản phẩm </string>
    <string name="menu_change_password">Đổi mật khẩu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="slide1_heading">Xin chào!</string>
    <string name="slide2_heading">Chất lượng hàng đầu</string>
    <string name="slide3_heading">Lựa chọn đa dạng</string>

    <string name="slide1_infor">Tri thức tới tay chỉ trong vài bước chạm</string>
    <string name="slide2_infor">Khu vườn tri thức mọi người, dễ dàng tiếp cận </string>
    <string name="slide3_infor">Sự hiểu biết của bạn là hạnh phúc của chúng tôi!</string>


    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="started_btn">Bắt đầu</string>
    <string name="remember_account">Ghi nhớ tài khoản</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="password">Mật khẩu</string>
    <string name="update_profile">Chỉnh sửa</string>
    <string name="donHang">Đơn hàng</string>
    <string name="uuDai">Chat</string>
    <string name="trangChu">Trang chủ</string>
    <string name="caNhan">Cá nhân</string>
    <string name="rau_c">Rau, củ</string>
    <string name="hoa_qu">Kinh tế</string>
    <string name="th_t">Tâm lý</string>
    <string name="n">Đồ ăn</string>
    <string name="nh_ng_lo_i_rau_c_mua_nhi_u_nh_t">Những loại Văn học mua nhiều nhất</string>
    <string name="search_bar">Tìm kiếm tên sách, tên tác giả ...</string>
    <string name="test_text">Test</string>
    <string name="trending_text">Thịnh Hành</string>
    <string name="new_text">Sách Mới</string>
    <string name="van_hoc_text">Văn học</string>
    <string name="kinh_te_text">Kinh tế</string>
    <string name="tam_ly_ky_nang_song_text">Tâm lý</string>

    <string name="sach_thieu_nhi_text">Thiếu nhi</string>
    <string name="tieu_su_hoi_ky_text">Hồi ký</string>
    <string name="giao_khoa_tham_khao_text">Giáo khoa</string>
    <string name="sach_hoc_ngoai_ngu_text">Ngoại ngữ</string>
    <string name="all_text">Tất cả</string>
    <string name="nuoi_day_con">Giáo dục</string>
    <string name="xem_them_text">Xem thêm</string>
    <string name="mo_ta_text">Thông tin sản phẩm</string>
    <string name="nha_cung_cap_text">Nhà cung cấp</string>
    <string name="tac_gia_text">Tác giả</string>
    <string name="slider">slider</string>
    <string name="kinh_t">Kinh tế</string>
    <string name="main_slider_description">main slider description</string>
    <string name="sach_moi">Sách mới</string>

</resources>