<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/loginbkg_1"
    tools:context=".Activity.SignInActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edittext">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="#ffffff">

            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="36sp"
                android:textStyle="bold" />




            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/form_SignInActivity_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:startIconDrawable="@drawable/ic_baseline_phone_24"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:endIconMode="clear_text">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionNext"
                    android:maxLength="100"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:hint="@string/phone_number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/form_SignInActivity_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_baseline_password_24"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:endIconMode="password_toggle">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionDone"
                    android:maxLength="100"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:hint="@string/password"/>

            </com.google.android.material.textfield.TextInputLayout>
                    android:text="@string/remember_account"
            <CheckBox
                android:id="@+id/chk_sign_in_activity_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:checked="true"
                android:buttonTint="#1449E8"
                android:text="@string/remember_account"/>

            <Button
                android:id="@+id/btn_SignInActivity_signIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#0C61F3"
                android:text="Đăng nhập"/>
            <LinearLayout
                android:id="@+id/layout_SignInActivity_signIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:text="Bạn chưa có tài khoản ?"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textSize="15sp"
                    android:textColor="#0000ff"
                    android:text="Đăng ký"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="10dp">
                <ProgressBar
                    android:id="@+id/progressBar_SignInActivity_loadingLogin"
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>